# ml_handbook_RAG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: ragnarek.py
data/: filename2url.json
embeddings/: bge_embeddings.py
experiments/: README.md  rag_evaluation.ipynb  retrievier_hp_search.py
faiss/: index.pkl
model/: llm_setup.py  rag_chain.py
parser/: html_parser.py
retrieval/: doc_loader.py  text_splitter.py  threshold_retriever.py  vectorstore.py
